made locations and tours mgmt. components (static)

--- a/src/app/admin-layout/admin-layout.component.html
+++ b/src/app/admin-layout/admin-layout.component.html
@@ -30,7 +30,7 @@
 
         <li class="nav-item">
           <a routerLink="/admin/destinations" class="nav-link" routerLinkActive="active">
-            <i class="nav-icon fas fa-map-marked-alt"></i>
+            <i class="nav-icon fas fa-globe-americas"></i>
             <span class="nav-text">Destinations</span>
           </a>
         </li>
@@ -44,14 +44,14 @@
 
         <li class="nav-item">
           <a routerLink="/admin/tours" class="nav-link" routerLinkActive="active">
-            <i class="nav-icon fas fa-bus"></i>
+            <i class="nav-icon fas fa-route"></i>
             <span class="nav-text">Tours</span>
           </a>
         </li>
 
         <li class="nav-item">
           <a routerLink="/admin/itinerary-admin" class="nav-link" routerLinkActive="active">
-            <i class="nav-icon fas fa-route"></i>
+            <i class="nav-icon fas fa-clipboard-list"></i>
             <span class="nav-text">Itineraries</span>
           </a>
         </li>
