--- a/src/app/admin-layout/users/users.component.scss
+++ b/src/app/admin-layout/users/users.component.scss
@@ -149,7 +149,7 @@ $font-heading: 'Playfair Display', serif;
     }
     
     .table-wrapper {
-      overflow-x: hidden;
+      overflow-x: auto;
       
       .users-table {
         width: 100%;
