--- a/src/app/admin-layout/itnerary/itnerary-admin/itnerary-admin.component.html
+++ b/src/app/admin-layout/itnerary/itnerary-admin/itnerary-admin.component.html
@@ -1,58 +1,79 @@
-<div class="container">
-     <div class="navigation-links">
-      <a routerLink="/" class="home-link">
-        <i class="fa fa-home"></i> Home
-      </a>
-      <h2>Itinerary Management</h2>
-  <div *ngIf="error" class="error">{{ error }}</div>
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.id }}</td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.name }}</td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.phone }}</td>
-    </ng-container>
-    <ng-container matColumnDef="destination">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.destination }}</td>
-    </ng-container>
-    <ng-container matColumnDef="travelers">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Travelers</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.travelers }}</td>
-    </ng-container>
-    <ng-container matColumnDef="children">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Children</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.children }}</td>
-    </ng-container>
-    <ng-container matColumnDef="childAges">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Child Ages</th>
-      <td mat-cell *matCellDef="let itinerary">{{ formatChildAges(itinerary.childAges) }}</td>
-    </ng-container>
-    <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration (Days)</th>
-      <td mat-cell *matCellDef="let itinerary">{{ itinerary.duration }}</td>
-    </ng-container>
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Travel Date</th>
-      <td mat-cell *matCellDef="let itinerary">{{ formatDate(itinerary.date) }}</td>
-    </ng-container>
-    <ng-container matColumnDef="created_at">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-      <td mat-cell *matCellDef="let itinerary">{{ formatDate(itinerary.created_at) }}</td>
-    </ng-container>
+<!-- Added itinerary-container class for main container -->
+<div class="itinerary-container">
+    <!-- Wrapped navigation in page-header for styling -->
+    <div class="page-header">
+        <!-- Moved h2 to page-title and added navigation-links class -->
+        <div class="navigation-links">
+            <!-- <a routerLink="/" class="home-link">
+                <i class="fa fa-home"></i> Home
+            </a> -->
+            <h2 class="page-title">Itinerary Management</h2>
+        </div>
+        <!-- Added page-description for consistency -->
+        <p class="page-description">Manage travel itineraries and bookings</p>
+    </div>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <!-- Added error class for styling -->
+    <div *ngIf="error" class="error-message">{{ error }}</div>
+
+    <!-- Added table-container for styling -->
+    <div class="table-container">
+        <!-- Added table-wrapper for scroll control -->
+        <div class="table-wrapper">
+            <table mat-table [dataSource]="dataSource" matSort class="itineraries-table mat-elevation-z8">
+                <!-- Added data-label for mobile view -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="ID">{{ itinerary.id }}</td>
+                </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Name">{{ itinerary.name }}</td>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Email">{{ itinerary.email }}</td>
+                </ng-container>
+                <ng-container matColumnDef="phone">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Phone">{{ itinerary.phone }}</td>
+                </ng-container>
+                <ng-container matColumnDef="destination">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Destination">{{ itinerary.destination }}</td>
+                </ng-container>
+                <ng-container matColumnDef="travelers">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Travelers</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Travelers">{{ itinerary.travelers }}</td>
+                </ng-container>
+                <ng-container matColumnDef="children">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Children</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Children">{{ itinerary.children }}</td>
+                </ng-container>
+                <ng-container matColumnDef="childAges">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Child Ages</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Child Ages">{{ formatChildAges(itinerary.childAges) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="duration">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration (Days)</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Duration">{{ itinerary.duration }}</td>
+                </ng-container>
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Travel Date</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Travel Date">{{ formatDate(itinerary.date) }}</td>
+                </ng-container>
+                <ng-container matColumnDef="created_at">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
+                    <td mat-cell *matCellDef="let itinerary" data-label="Created At">{{ formatDate(itinerary.created_at) }}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+        <!-- Wrapped paginator in pagination-container -->
+        <div class="pagination-container">
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+    </div>
 </div>
