added group, company portfolio and custom planner

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -24,6 +24,9 @@
           <li><a routerLink="/testimonials">Testimonials</a></li>
           <li><a routerLink="/contact">Contact</a></li>
           <li><a routerLink="/privacyPolicy">Privacy Policy</a></li>
+           <li><a routerLink="/customize-planner">Customize your trip</a></li>
+          <li><a routerLink="/company-portfolio">Our company portfolio</a></li>
+          <li><a routerLink="/group-brochure">Group Brochure</a></li>
         </ul>
       </div>
       <div class="footer-col">
