--- a/src/app/common/trip-planner/trip-planner.component.scss
+++ b/src/app/common/trip-planner/trip-planner.component.scss
@@ -40,7 +40,7 @@ $shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.0
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(8px);
   display: flex;
@@ -107,6 +107,7 @@ $shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.0
     transition: all 0.2s ease;
     font-size: 1.5rem;
     font-weight: bold;
+    z-index: 5000;
 
     &:hover {
       background: rgba(255, 255, 255, 0.3);
