standardized itinerary mgmt.

--- a/src/app/admin-layout/destinations/destinations.component.html
+++ b/src/app/admin-layout/destinations/destinations.component.html
@@ -139,7 +139,7 @@
         <!-- No Destinations Message -->
         <ng-template #noDestinations>
             <div class="no-destinations">
-                <i class="fas fa-map-marked-alt no-destinations-icon"></i>
+                <i class="fas fa-globe-americas no-destinations-icon"></i>
                 <h3>No Destinations Found</h3>
                 <p *ngIf="searchTerm">No destinations match your search criteria.</p>
                 <p *ngIf="!searchTerm">No destinations have been added yet.</p>
