fixed destination view

--- a/src/app/admin-layout/destinations/destinations.component.html
+++ b/src/app/admin-layout/destinations/destinations.component.html
@@ -121,7 +121,7 @@
                                         </div>
                                         <div class="detail-item">
                                             <span class="detail-label">Time Zone:</span>
-                                            <span class="detail-value">{{ destination.timeZone }}</span>
+                                            <span class="detail-value">{{ destination.time_zone }}</span>
                                         </div>
                                     </div>
                                     <div class="description-section">
